Make Solid foundation for layout; Add all buttons
BUT, No logic added yet.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,38 @@
 </head>
 <body>
     <div id="outermost">
-        <div id="topDisplay"></div>
+        <div id="Display"></div>
+
         <div id="mainContainer">
-            <div id="numbers">
-
+            <div id="column1">
+                <button id="bDelte">Del</button>
+                <button id="b7">7</button>
+                <button id="b4">4</button>
+                <button id="b1">1</button>
+                <button id="bSign">+/-</button>
             </div>
-            <div id="operators">
-
+            <div id="column2">
+                <button id="bAC">AC</button>
+                <button id="b8">8</button>
+                <button id="b5">5</button>
+                <button id="b2">2</button>
+                <button id="b0">0</button>
+            </div>
+            <div id="column3">
+                <button id="bPercent">%</button>
+                <button id="b9">9</button>
+                <button id="b6">6</button>
+                <button id="b3">3</button>
+                <button id="bDecimal">.</button>
+            </div>
+            <div id="column4">
+                <button id="bDivide">÷</button>
+                <button id="bMultiply">×</button>
+                <button id="bSubtract">-</button>
+                <button id="bAdd">+</button>
+                <button id="bOperate">=</button>
             </div>
         </div>
     </div>
-</body>
+    </body>
 </html>
